--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
   <a-scene stats id="scene" vr-mode-ui="enabled: true" background="color: skyblue">
     <a-entity position="0 1 -2" geometry="primitive: plane; width: 4; height: 4" rotation="-90 0 0" material="color: green"></a-entity>
-    <a-box foo scale="0.1 0.1 0.1" position="0 1 -3" material="color: red">
+    <a-box spaceship follow-camera scale="0.1 0.1 0.1" position="0 1 -3" material="color: red">
       <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
     </a-box>
+    <a-entity position="0 1.6 0" id="camera" camera></a-entity>
   </a-scene>
 </body>
 
