--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <a-scene stats id="scene" vr-mode-ui="enabled: true" background="color: skyblue">
     <a-entity position="0 1 -2" geometry="primitive: plane; width: 4; height: 4" rotation="-90 0 0" material="color: green"></a-entity>
-    <a-entity spaceship follow-camera position="0 1 -3">
+    <a-entity spaceship spaceship-model follow-camera position="0 1 -3">
       <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
     </a-entity>
     <a-entity position="0 1.6 0" id="camera" camera></a-entity>
