--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <a-entity spaceship spaceship-model follow-camera position="0 1 -3">
       <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
     </a-entity>
-    <a-entity position="0 1.6 0" id="camera" camera></a-entity>
+    <a-entity position="0 1 0">
+      <a-entity position="0 0.6 -2" id="camera" camera></a-entity>
+    </a-entity>
   </a-scene>
 </body>
 
