--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 </head>
 
 <body>
-  <a-scene stats id="scene" vr-mode-ui="enabled: true" background="color: skyblue">
-    <a-entity position="0 1 -2" geometry="primitive: plane; width: 4; height: 4" rotation="-90 0 0" material="color: green"></a-entity>
-    <a-entity spaceship spaceship-model follow-camera position="0 1 -3">
+  <a-scene shadow="type: pcfsoft" stats id="scene" vr-mode-ui="enabled: true" background="color: skyblue">
+
+    <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
+    <a-entity light="type: directional;
+                       castShadow: true;
+                       intensity: 1;" position="0 5 0"></a-entity>
+
+    <a-entity position="0 1 -2" geometry="primitive: plane; width: 4; height: 4" rotation="-90 0 0" material="color: green" shadow="receive: true"></a-entity>
+    <a-entity spaceship spaceship-model follow-camera position="0 1 -3" shadow="cast: true; receive: false">
       <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
     </a-entity>
     <a-entity position="0 1 0">
