--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
   <a-scene shadow="type: pcfsoft" stats id="scene" vr-mode-ui="enabled: true" background="color: skyblue">
 
     <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
-    <a-entity light="type: directional;
-                       castShadow: true;
-                       intensity: 1;" position="0 5 0"></a-entity>
 
-    <a-entity position="0 1 -2" geometry="primitive: plane; width: 4; height: 4" rotation="-90 0 0" material="color: green" shadow="receive: true"></a-entity>
+    <a-entity position="0 1 -2" terrain rotation="-90 0 0" shadow="receive: true; cast: false"></a-entity>
     <a-entity spaceship spaceship-model follow-camera position="0 1 -3" shadow="cast: true; receive: false">
       <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
     </a-entity>
-    <a-entity position="0 1 0">
-      <a-entity position="0 0.6 -2" id="camera" camera></a-entity>
+
+    <a-entity position="0 1 0" dirlight>
+      <a-entity position="0 0.6 -2" id="camera" camera>
+      </a-entity>
     </a-entity>
   </a-scene>
 </body>
