--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
 
-    <a-entity position="0 1 -2" terrain rotation="-90 0 0" shadow="receive: true; cast: false"></a-entity>
+    <a-entity id="world" position="0 1 -2" terrain rotation="-90 0 0" shadow="receive: true; cast: false"></a-entity>
     <a-entity spaceship spaceship-model follow-camera position="0 1 -3" shadow="cast: true; receive: false">
       <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
     </a-entity>
