Refactor + added game system

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <a-scene shadow="type: pcfsoft" stats id="scene" vr-mode-ui="enabled: true" background="color: skyblue">
+  <a-scene game shadow="type: pcfsoft" stats id="scene" vr-mode-ui="enabled: true" background="color: skyblue">
 
     <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
 
