--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a-entity id="world">
       <a-entity id="collidables">
         <a-entity terrain shadow="receive: true; cast: false"></a-entity>
+        <a-entity building position="2 10 -2"></a-entity>
       </a-entity>
       <a-entity spaceship spaceship-model follow-camera shadow="cast: true; receive: false">
         <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
