Add some more buildings to destroy!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <a-entity id="collidables">
         <a-entity terrain shadow="receive: true; cast: false"></a-entity>
         <a-entity building position="2 10 -2"></a-entity>
+        <a-entity building position="3 10 -2"></a-entity>
+        <a-entity building position="4 10 -2"></a-entity>
+        <a-entity building position="5 10 -2"></a-entity>
       </a-entity>
       <a-entity spaceship spaceship-model follow-camera shadow="cast: true; receive: false">
         <a-entity visible="false" oculus-touch-controls="hand: left"></a-entity>
