Add random trees!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
 
     <a-entity id="world">
-      <a-entity id="collidables">
+      <a-entity id="collidables" generate-trees>
         <a-entity terrain shadow="receive: true; cast: false"></a-entity>
         <a-entity building position="2 10 -2"></a-entity>
         <a-entity building position="3 10 -2"></a-entity>
