Split up terrain into multiple grid parts for better perf

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <a-entity id="world">
       <a-entity id="collidables" generate-trees>
-        <a-entity terrain shadow="receive: true; cast: false"></a-entity>
+        <a-entity terraingridmaker shadow="receive: true; cast: false"></a-entity>
         <a-entity building position="2 10 -2"></a-entity>
         <a-entity building position="3 10 -2"></a-entity>
         <a-entity building position="4 10 -2"></a-entity>
